# OmniVid

./: .dockerignore  .env.example  .env.local  .env.local.example  .eslintrc.json  .gitignore  .vercelignore  DEPLOYMENT.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP.md  SUPABASE_SETUP_GUIDE.md  TROUBLESHOOTING.md  build-output.txt  cleanup.ps1  configure_oauth.py  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.unified.yml  docker-compose.yml  docker-compose.yml.bak  middleware.ts  netlify.toml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  requirements-no-alembic.txt  tailwind.config.ts  test-create.json  test_supabase_connection.py  turbo.json  update-imports.js  vercel-build.js  vercel.json  verify_supabase_schema.py
.next_old/: trace  (+4 more)
backend/: .env  .env.example  .flake8  .gitignore  .isort.cfg  BACKEND_RUNNING.md  Dockerfile  Dockerfile.test  MANIFEST.in  Makefile  README.md  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  requirements_clean.txt  setup.py  start.ps1  test_auth.py  test_blender_supervisor.py  test_production_render.py
backend/app/: celery_app.py  config.py
backend/app/models/: __init__.py  video.py
backend/app/schemas/: video.py
backend/app/tasks/: video_tasks.py
backend/src/: main.py  test_request.json
backend/src/api/: main.py
backend/src/auth/: routes.py  schemas.py  security.py  supabase_auth.py  supabase_routes.py
backend/src/config/: __init__.py  settings.py
backend/src/core/: supabase.py
backend/src/database/: connection.py  models.py  models_supabase.py  repository.py  schemas.py
backend/src/models/: user.py
backend/src/render_engines/: base.py  ffmpeg_production.py
backend/src/services/: ai_service.py  auth_service.py  file_manager.py  render_pipeline.py  task_manager.py  websocket_manager.py
backend/src/utils/: avatar.py  blender_supervisor.py  debounced_writer.py  production_render.py  structured_logger.py
backend/tests/: conftest.py  test_api_endpoints.py  test_auth.py  test_auth_migration.py  test_celery.py  test_connection_pooling.py  test_database.py  test_health.py  test_race_conditions.py  test_render_pipeline.py  test_video_api.py
(+420 files in other folders)
